# autonomikit-GPT_6

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Makefile  README.md  SECURITY.md  compose.prod.yml  compose.yml  gunicorn_conf.py  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES.md  seed_issues.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  draft-release.yml  publish-pypi.yml  release.yml  seed-issues.yml
assets/: README.md
dashboard/: Dockerfile  README.md  package.json  tsconfig.json  vercel.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/run/: route.ts
dashboard/components/: ResultCard.tsx
dashboard/styles/: globals.css
docs/: architecture.md  dashboard.md  deploy.md  index.md  publishing.md  quickstart.md  tools.md
examples/: research_agent.py
src/autonomi_kit/: __init__.py  cli.py  config.py  llm.py  orchestrator.py
src/autonomi_kit/agent/: planner.py
src/autonomi_kit/api/: main.py
src/autonomi_kit/eval/: bench.py
src/autonomi_kit/tools/: arxiv.py  base.py  github.py  notion.py  python_exec.py  vector_store.py  web_fetch.py  web_search.py  wikipedia.py
