[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomi-kit"
version = "0.1.0"
description = "AutonomiKit‑GPT — An open, agentic LLM stack (API + CLI + Tools + Memory)"
readme = "README.md"
keywords = ["LLM", "agents", "FastAPI", "OpenAI", "AI", "orchestration"]
requires-python = ">=3.10"
authors = [{ name = "AutonomiKit‑GPT Maintainers" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "duckduckgo-search>=6.1.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.14.1",
    "tiktoken>=0.7.0",
    "chromadb>=0.5.3",
    "matplotlib>=3.8.0",
    "wikipedia>=1.4.0",
    "arxiv>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.10",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
autonomi = "autonomi_kit.cli:app"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "UP", "I"]
ignore = ["E501"]
exclude = ["docs", "dist", "build"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = false


[project.urls]
Homepage = "https://github.com/josdisk/AutonomiKit-GPT"
Repository = "https://github.com/josdisk/AutonomiKit-GPT"
Documentation = "https://josdisk.github.io/AutonomiKit-GPT/"
